Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18618

sanity-flr test_70a: dotruncate: ftruncate: Stale file handle

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      This issue was created by maloo for bobijam <bobijam@hotmail.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/7e38aa6f-2616-4a5c-9205-e1e772be3a15

      test_70a failed with the following error:

      fsx FLR file /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr failed
      
      dotruncate: ftruncate: Stale file handle
      LOG DUMP (11 total operations):
      1: 1736294833.334091 SKIPPED (no operation)
      2: 1736294833.334967 SKIPPED (no operation)
      3: 1736294833.335355 SKIPPED (no operation)
      4: 1736294833.336434 MIRROR_EXTEND to 2 mirrors
      5: 1736294833.383874 FALLOC   0x3bf18 thru 0x40000	(0x040e8 bytes)EXTENDING
      6: 1736294833.389029 WRITE    0x2feb8 thru 0x3993d (0x09a86 bytes)
      7: 1736294833.391424 SKIPPED (no operation)
      8: 1736294833.391803 MAPREAD  0x3f1e6 thru 0x3ffff (0x00e1a bytes)
      9: 1736294833.393216 FALLOC   0x38aad thru 0x40000	(0x07553 bytes)INTERIOR
      10: 1736294833.394197 WRITE    0x1b559 thru 0x230d3 (0x07b7b bytes)
      11: 1736294833.395549 TRUNC_DN 0x40000 to 0x0bcf9
      Using seed 4833
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/110126 - 4.18.0-553.27.1.el8_10.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/110126 - 4.18.0-553.27.1.el8_lustre.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-flr test_70a - fsx FLR file /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr failed

      Attachments

        Issue Links

          Activity

            People

              bobijam Zhenyu Xu
              maloo Maloo
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: