lustre/ofd/ofd_dev.c
@@ -1210,7 +1210,8 @@ static int ofd_getattr_hdl(struct tgt_session_info *tsi)
 			repbody->oa.o_layout_version =
 			     fo->ofo_ff.ff_layout_version + fo->ofo_ff.ff_range;
 
-			CDEBUG(D_INODE, DFID": get layout version: %u\n",
+			CDEBUG(D_INODE, "%s:"DFID": get layout version: %#x\n",
+			       tsi->tsi_tgt->lut_obd->obd_name,
 			       PFID(&tsi->tsi_fid),
 			       repbody->oa.o_layout_version);
 		}
