lustre/ofd/ofd_objects.c
@@ -113,19 +113,21 @@ struct ofd_object *ofd_object_find(const struct lu_env *env,
  *
  * \param[in] env	execution environment
  * \param[in] fo	OFD object
+ * \param[in] force	force to read EA XATTR_NAME_FID
  *
  * \retval		0 if successful
  * \retval		-ENODATA if there is no such xattr
  * \retval		negative value on error
  */
-int ofd_object_ff_load(const struct lu_env *env, struct ofd_object *fo)
+int ofd_object_ff_load(const struct lu_env *env, struct ofd_object *fo,
+		       bool force)
 {
 	struct ofd_thread_info *info = ofd_info(env);
 	struct filter_fid *ff = &fo->ofo_ff;
 	struct lu_buf *buf = &info->fti_buf;
 	int rc = 0;
 
-	if (fid_is_sane(&ff->ff_parent))
+	if (fid_is_sane(&ff->ff_parent) && !force)
 		return 0;
 
 	buf->lb_buf = ff;
@@ -564,13 +566,14 @@ int ofd_object_ff_update(const struct lu_env *env, struct ofd_object *fo,
 			 const struct obdo *oa, struct filter_fid *ff)
 {
 	int rc = 0;
+
 	ENTRY;
 
 	if (!(oa->o_valid &
 	      (OBD_MD_FLFID | OBD_MD_FLOSTLAYOUT | OBD_MD_LAYOUT_VERSION)))
 		RETURN(0);
 
-	rc = ofd_object_ff_load(env, fo);
+	rc = ofd_object_ff_load(env, fo, true);
 	if (rc < 0 && rc != -ENODATA)
 		RETURN(rc);
 
@@ -597,12 +600,14 @@ int ofd_object_ff_update(const struct lu_env *env, struct ofd_object *fo,
 		ff->ff_layout = oa->o_layout;
 
 	if (oa->o_valid & OBD_MD_LAYOUT_VERSION) {
-		CDEBUG(D_INODE, DFID": OST("DFID") layout version %u -> %u\n",
+		CDEBUG(D_INODE,
+		       "%s:"DFID":"DFID" layout version %#x -> %#x, oa_valid %#llx\n",
+		       ofd_name(ofd_obj2dev(fo)),
 		       PFID(&fo->ofo_ff.ff_parent),
 		       PFID(lu_object_fid(&fo->ofo_obj.do_lu)),
-		       ff->ff_layout_version, oa->o_layout_version);
-
-		/**
+		       ff->ff_layout_version, oa->o_layout_version,
+		       oa->o_valid);
+		/*
 		 * resync write from client on non-primary objects and
 		 * resync start from MDS on primary objects will contain
 		 * LU_LAYOUT_RESYNC flag in the @oa.
@@ -791,7 +796,7 @@ int ofd_object_fallocate(const struct lu_env *env, struct ofd_object *fo,
 		RETURN(rc);
 
 	if (ff != NULL) {
-		rc = ofd_object_ff_load(env, fo);
+		rc = ofd_object_ff_load(env, fo, false);
 		if (rc == -ENODATA)
 			ff_needed = true;
 		else if (rc < 0)
