lustre/tests/sanity-flr.sh
@@ -3346,7 +3346,9 @@ test_70a() {
 		error "setstripe $tf failed"
 
 	FSXNUM=${FSXNUM:-1000}
-	$FSX -p 1 -N $FSXNUM -S 0 -M $tf || error "fsx FLR file $tf failed"
+	FSXSEED=${FSXSEED:-0}
+	$FSX -p 1 -N $FSXNUM -S $FSXSEED -M $tf ||
+		error "fsx FLR file $tf failed"
 }
 run_test 70a "flr mode fsx test"
 
